abstract class Asset {
  String name;
  int price;

  Asset(this.name, this.price);
}
